--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Wenli Zhang</title>
+<title>Contact Wenli Zhang University of Arizona</title>
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
