--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <img src="./images/linkedin.png" valign="middle" style="width:20px;height:20px;">
                     </td>
                     <td>
-                    <a href="https://www.linkedin.com/in/wenli-zhang-63443557"><strong>LinkedIn</strong></a>
+                    <a href="https://www.linkedin.com/in/wenli-zhang"><strong>LinkedIn</strong></a>
                     </td>
                 </tr>
                 
