--- a/teaching.html
+++ b/teaching.html
@@ -53,6 +53,7 @@
             <li>Using and Managing Information Systems </li>
             </ul>
             
+        <a href="./files/TeachingStatement_WenliZhang.pdf" class="button">Teaching Statement</a>    
             
         </article>
 
